# rust_os

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  justfile  rustfmt.toml  x86_64-rust_os.json
.cargo/: config
src/: lib.rs  main.rs  print.rs  uefi.rs  vga_buffer.rs
src/arch/x86_64/: boot.asm  grub.cfg  linker.ld  multiboot_header.asm
