[package]
name = "rust_os"
version = "0.1.0"
authors = ["Kenta Kubo <601636+kkk669@users.noreply.github.com>"]
edition = "2018"

[dependencies]
log = { version = "0.4", default-features = false }
uefi = { git = "https://github.com/rust-osdev/uefi-rs.git" }
uefi-services = { git = "https://github.com/rust-osdev/uefi-rs.git" }
uefi-exts = { git = "https://github.com/rust-osdev/uefi-rs.git" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
