[package]
name = "rust_os"
version = "0.1.0"
authors = ["Kenta Kubo <601636+kkk669@users.noreply.github.com>"]
edition = "2018"

[dependencies]
log = { version = "0.4", default-features = false }
uefi = { version = "0.12.0" }
uefi-services = { version = "0.9.0" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
